<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">
    
    <TextView
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/settings_store"
	    android:textStyle="bold"
	    android:gravity="center_horizontal"
	    android:layout_marginBottom="10dp" />
    
	<CheckBox
	    android:id="@+id/settings_save_checkbox"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/settings_description" />
	
	<LinearLayout
	    android:id="@+id/settings_data_privacy_layout"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:visibility="gone" >
	
		<TextView
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/settings_data_privacy"
		    android:textStyle="bold"
		    android:gravity="center_horizontal"
		    android:layout_marginBottom="10dp" />
		
		<CheckBox
		    android:id="@+id/settings_dbs_checkbox"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/settings_dbs_description" />
	</LinearLayout>
	
	<TextView
	    android:id="@+id/settings_version_name"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="right|bottom" />

</LinearLayout>