<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_height="wrap_content" 
   android:layout_width="fill_parent" 
   android:orientation="vertical"
   android:paddingBottom="5dp"
   android:paddingTop="5dp"
   android:paddingLeft="5dp">
   
   <TextView
       android:id="@+id/borrowed_item_about"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:textStyle="bold" />
   
   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content">
       
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:orientation="vertical" >
       
		   <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent">
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:width="130dp"
		            android:text="@string/account_borrowed_signature" />
		        
		        <TextView
		            android:id="@+id/borrowed_item_signature"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"/>
		   </LinearLayout>
		   
		   <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent">
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:width="130dp"
		            android:text="@string/account_borrowed_duedate" />
		        
		        <TextView
		            android:id="@+id/borrowed_item_duedate"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"/>
		   </LinearLayout>
		   
		   <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent">
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:width="130dp"
		            android:text="@string/account_borrowed_queue" />
		        
		        <TextView
		            android:id="@+id/borrowed_item_queue"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"/>
		   </LinearLayout>
		   
		   <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent">
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:width="130dp"
		            android:text="@string/account_borrowed_renewals" />
		        
		        <TextView
		            android:id="@+id/borrowed_item_renewals"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"/>
		   </LinearLayout>
		   
		   <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent">
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:width="130dp"
		            android:text="@string/account_borrowed_status" />
		        
		        <TextView
		            android:id="@+id/borrowed_item_status"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"/>
		   </LinearLayout>
	   
	   </LinearLayout>
	   
	   <CheckBox
	       android:id="@+id/borrowed_item_checkbox"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_gravity="center_vertical"
	       android:clickable="false"
	       android:focusable="false"
	       android:minWidth="35dp" />
	   
	</LinearLayout>
</LinearLayout>