<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="vertical" >
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
	    <ImageView
	        android:id="@+id/detail_item_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="5dp"
	        android:adjustViewBounds="true"
	        android:maxWidth="90dp"
	        android:scaleType="fitStart"
	        android:src="@drawable/ic_action_search_holo_dark" />

		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		    
		    <TextView android:id="@+id/detail_item_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:layout_marginBottom="5dp"/>
		    
		    <TextView android:id="@+id/detail_item_sub"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/second_text_color"
		        android:ellipsize="end"
		        android:maxLines="4"
		        android:layout_marginBottom="5dp"/>
		    
		    <ProgressBar
		        android:id="@+id/progress_bar_small"
		        style="?android:attr/progressBarStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
		    
		    <TextView android:id="@+id/detail_item_author_extended"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
		</LinearLayout>
	    
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/detail_index_container"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginTop="10dp"
	    android:visibility="gone">
		
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal|center_vertical"
	        android:gravity="center_horizontal|center_vertical"
	        android:background="@color/list_alternate"
	        android:padding="8dp"
	        android:text="@string/detail_index"
	        android:textStyle="bold" />
		
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/detail_interlanding_container"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginTop="10dp"
	    android:visibility="gone">
		
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal|center_vertical"
	        android:gravity="center_horizontal|center_vertical"
	        android:background="@color/list_alternate"
	        android:padding="8dp"
	        android:text="@string/detail_interlending"
	        android:textStyle="bold" />
		
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:paddingLeft="5dp"
	    android:orientation="vertical">
		
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textStyle="bold"
		    android:text="@string/detail_available"
		    android:layout_marginBottom="3dp"/>
		
		<ImageView
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:src="@drawable/divider"/>
		
		<ListView android:id="@id/android:list"
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:divider="@drawable/divider"
	        android:dividerHeight="1px"
	        android:layout_weight="1"
	        android:drawSelectorOnTop="false"/>
	    
	    <LinearLayout
	        android:id="@+id/progressContainer"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="top|center_horizontal"
	        android:orientation="vertical"
	        android:visibility="gone" >
	
	        <ProgressBar style="?android:attr/progressBarStyleLarge"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" />
	        <TextView android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:text="@string/loading_in_progress"
	                android:paddingTop="4dip"
	                android:singleLine="true" />
	
	    </LinearLayout>
	    
	    <TextView
	        android:id="@id/android:empty"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center_horizontal"
	        android:padding="5dp"
	        android:text="@string/empty_list" />
	    
	</LinearLayout>

</LinearLayout>